--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vue-router": "^4.2.5"
   },
   "dependencies": {
-    "@nuxt/image": "^1.0.0"
+    "@nuxt/image": "^1.0.0",
+    "@nuxtjs/i18n": "^8.3.1"
   }
 }
