--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "autoprefixer": "^10.4.16",
     "nuxt": "^3.11.2",
     "postcss": "^8.4.31",
+    "sass": "^1.77.6",
+    "sass-loader": "^14.2.1",
     "tailwindcss": "^3.3.5",
     "vue": "^3.3.8",
     "vue-router": "^4.2.5"
