--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@nuxt/image": "^1.0.0",
-    "@nuxtjs/i18n": "^8.3.1"
+    "@nuxtjs/i18n": "^8.3.1",
+    "vue-i18n": "^9.13.1"
   }
 }
