--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nuxt/image": "^1.0.0",
     "@nuxt/types": "^2.17.4",
     "@nuxtjs/i18n": "^8.3.1",
+    "@nuxtjs/tailwindcss": "^6.12.0",
     "nuxt3": "^3.8.0-28284309.b3d3d7f4",
     "vue-i18n": "^9.13.1"
   }
