--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@nuxt/devtools": "latest",
     "@nuxtjs/google-fonts": "^3.0.2",
     "autoprefixer": "^10.4.16",
-    "nuxt": "^3.11.2",
+    "nuxt": "^3.12.2",
     "postcss": "^8.4.31",
     "sass": "^1.77.6",
     "sass-loader": "^14.2.1",
@@ -27,6 +27,7 @@
     "@nuxtjs/i18n": "^8.3.1",
     "@nuxtjs/tailwindcss": "^6.12.0",
     "nuxt3": "^3.8.0-28284309.b3d3d7f4",
+    "vite": "^5.3.1",
     "vue-i18n": "^9.13.1"
   }
 }
