--- a/package.json
+++ b/package.json
@@ -17,17 +17,12 @@
     "postcss": "^8.4.31",
     "sass": "^1.77.6",
     "sass-loader": "^14.2.1",
-    "tailwindcss": "^3.3.5",
-    "vue": "^3.3.8",
-    "vue-router": "^4.2.5"
+    "tailwindcss": "^3.3.5"
   },
   "dependencies": {
     "@nuxt/image": "^1.7.0",
-    "@nuxt/types": "^2.17.4",
     "@nuxtjs/i18n": "^8.3.1",
     "@nuxtjs/tailwindcss": "^6.12.0",
-    "nuxt3": "^3.8.0-28284309.b3d3d7f4",
-    "vite": "^5.3.1",
-    "vue-i18n": "^9.13.1"
+    "vue-i18n": "^9.2.2"
   }
 }
