--- a/package.json
+++ b/package.json
@@ -11,18 +11,15 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
-    "@nuxtjs/google-fonts": "^3.2.0",
+    "@nuxtjs/google-fonts": "^3.0.2",
     "autoprefixer": "^10.4.16",
-    "nuxt": "^3.12.2",
+    "nuxt": "^3.11.2",
     "postcss": "^8.4.31",
-    "sass": "^1.77.6",
-    "sass-loader": "^14.2.1",
-    "tailwindcss": "^3.3.5"
+    "tailwindcss": "^3.3.5",
+    "vue": "^3.3.8",
+    "vue-router": "^4.2.5"
   },
   "dependencies": {
-    "@nuxt/image": "^1.7.0",
-    "@nuxtjs/i18n": "^8.3.1",
-    "@nuxtjs/tailwindcss": "^6.12.0",
-    "vue-i18n": "^9.2.2"
+    "@nuxt/image": "^1.0.0"
   }
 }
